  allows the specification of fallbacks when the preferred device is
  not available because of a missing R package. For SVG graphics,
  it will first try to use the R package `svglite` to produce
  lighter-weight SVG representations that are better when notebooks
  may include many figures and figure with large number of visual
  elements.

Changes
-------

- `rpy2` is now a namespace package, with `rpy2-rinterface`
  (low-level interface close to R's C API) and `rpy2-robjects`
  (possible more-Pythonic high-level interface using the low-level
  interface) 2 packages on pypi installing into that namespace.
  The package `rpy2` remains on pypi as essentially a metapackage
  depending on `rpy2-rinterface` and `rpy2-robjects`.

- :mod:`rpy2.rlike.functional` is deprecated. The functions it
  provides proved of little use and can implemented in one line.
  It will be removed with :mod:`rpy2` 3.7.

- :class:`rpy2.rlike.collections.OrdDict` is deprecated.
  :class:`rpy2.rlike.collections.NamedList` is enough to have
  a Python data structure to represent R lists or paired lists.

- The long-deprecated functions
  :func:`rpy2.robjects.robjects.numpy2ri.activate`,
  :func:`rpy2.robjects.robjects.numpy2ri.deactivate`,
  :func:`rpy2.robjects.robjects.pandas2ri.activate`,
  and :func:`rpy2.robjects.robjects.pandas2ri.deactivate` are no
  longer functional. Calling them will raise an exception pointing
  to documentation.

- The wrapper for ggplot2 is now targeting the R package `ggplot2`
  version 3.5.

- The wrapper for dplyr is now targeting the R package `dplyr`
  version 1.1.

# TODO: the conversion of Python lists is tweaked. Resolve this.
- The default converter for the ipython/jupyter magics depended on
  what was the default converter at the time of module import. To
  simplify it, the defautl converter is now fixed to
  `robjects.default_converter` + `robjects.numpy2ri.converter` +
  `robjects.pandas2ri.converter`. If `pandas` cannot be imported